; ModuleID = '/home/carl/AnghaBench/twemproxy/src/proto/extr_nc_redis.c_redis_fragment.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/proto/extr_nc_redis.c_redis_fragment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msg = type { i32, i32 }
%struct.msg_tqh = type { i32 }

@NC_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @redis_fragment(%struct.msg* %0, i32 %1, %struct.msg_tqh* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.msg*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.msg_tqh*, align 8
  store %struct.msg* %0, %struct.msg** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.msg_tqh* %2, %struct.msg_tqh** %7, align 8
  %8 = load %struct.msg*, %struct.msg** %5, align 8
  %9 = getelementptr inbounds %struct.msg, %struct.msg* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @array_n(i32 %10)
  %12 = icmp eq i32 1, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* @NC_OK, align 4
  store i32 %14, i32* %4, align 4
  br label %31

15:                                               ; preds = %3
  %16 = load %struct.msg*, %struct.msg** %5, align 8
  %17 = getelementptr inbounds %struct.msg, %struct.msg* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  switch i32 %18, label %29 [
    i32 129, label %19
    i32 130, label %19
    i32 128, label %24
  ]

19:                                               ; preds = %15, %15
  %20 = load %struct.msg*, %struct.msg** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = load %struct.msg_tqh*, %struct.msg_tqh** %7, align 8
  %23 = call i32 @redis_fragment_argx(%struct.msg* %20, i32 %21, %struct.msg_tqh* %22, i32 1)
  store i32 %23, i32* %4, align 4
  br label %31

24:                                               ; preds = %15
  %25 = load %struct.msg*, %struct.msg** %5, align 8
  %26 = load i32, i32* %6, align 4
  %27 = load %struct.msg_tqh*, %struct.msg_tqh** %7, align 8
  %28 = call i32 @redis_fragment_argx(%struct.msg* %25, i32 %26, %struct.msg_tqh* %27, i32 2)
  store i32 %28, i32* %4, align 4
  br label %31

29:                                               ; preds = %15
  %30 = load i32, i32* @NC_OK, align 4
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %29, %24, %19, %13
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32 @array_n(i32) #1

declare dso_local i32 @redis_fragment_argx(%struct.msg*, i32, %struct.msg_tqh*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
